@@ -1,3 +1,9 @@
+2011-07-26  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/int/kde.jl
+	* lisp/sawfish/wm/int/gnome.jl
+	* lisp/sawfish/wm/int/xfce.jl: added entries for launching the
+	desktop's menu-editor
+
 2011-07-25  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/single-window-mode.jl: added (my vision of)
 	single-window-mode
